overlapping issue in the my work secton solved

--- a/folio_assets/sass/base/reset.scss
+++ b/folio_assets/sass/base/reset.scss
@@ -16,3 +16,9 @@ body {
     
 }
 
+.insta-post-appender{
+    padding: 10px 15px;
+    margin: 10px 0;
+
+}
+
