--- a/folio_assets/sass/buffer/bundle.css
+++ b/folio_assets/sass/buffer/bundle.css
@@ -20,6 +20,10 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale; }
 
+.insta-post-appender {
+  padding: 10px 15px;
+  margin: 10px 0; }
+
 .cust_container_fluid {
   padding: 0 100px; }
 
